<resources>
    <!--CREDENCIALES DEL APLICATIVO -->
    <string name="app_name">Gestion502</string>
    <string name="developer">Jack Tejada</string>
    <string name="desarrollo">Desarrollado Por : </string>
    <string name="desarrollador_info">Desarrollado Por : Jack Tejada</string>
    <string name="version">Version 1.0.0 </string>
    <!--LOGIN-->
    <string name="tìtulo_Login">Ingrese Session</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">No tienes cuenta?, Registrate</string>

    <!-- REGISTRO -->
    <string name="titulo_registro">Registrarse</string>
    <string name="lbl_nombres">Nombre</string>
    <string name="txt_nombres">Ingrese Nombre</string>
    <string name="lbl_apellidos">Apellidos</string>
    <string name="txt_apellidos">Ingrese apellido</string>
    <string name="lbl_correo">Correo</string>
    <string name="txt_correo">Ingrese correo</string>
    <string name="lbl_password1">Nombre</string>
    <string name="txt_password1">Nombre</string>
    <string name="lbl_confirmar_password1">Confirmar contraseña</string>
    <string name="txt_confirmar_password1">Contraseña</string>
    <string name="btn_registrar">Registrar</string>
    <string name="lbl_ir_login">Volver a Ingreso</string>

    <!-- DASHBOARD -->
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario_nombre">Usuario Nombre:</string>
    <string name="empresa">Empresa</string>
    <string name="gastos">Gastos</string>
    <string name="tareas">Tareas</string>
    <string name="lista_tareas">Lista Tareas</string>
    <string name="favoritos">Favoritos</string>
    <string name="mis_datos">Mis datos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- Mis Datos  -->
    <string name="correo_md">Correo_usuario</string>
    <string name="codigo_md">Codigo Usuario</string>
    <string name="titulo_md">Mis Datos</string>
    <string name="datos_md">Datos:</string>
    <string name="leyenda_md">Todos los campos son requeridos: Nombre, Apellidos, Teléfono</string>
    <string name="nombre_md">Nombres</string>
    <string name="apellido_md">apellidos</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="edad_md">Edad</string>
    <string name="telefono_md">Telefono</string>
    <string name="domicilio_md">Domicilio</string>
    <string name="tiktok_md">Tiktok</string>
    <string name="profesion_md">Profesión</string>

    <!--CREDENCIALES APLICATIVO-->
    <string name="descripcion_dev">
    Soy un programador con las siguientes habilidades y cualidades:
    Poseo habilidades comunicativas.
    Habilidad para trabajar en equipo y buscar soluciones eficientes.
    Me organizao para poder planificar tareas y utilizar eficientemente mi tiempo.
    Poseo la capacidad de planear, diseñar, evaluar, controlar, instalar, integrar,
    construir, operar, administrar, y mantener sistemas que contemplen los sistemas
    de software y todo lo relacionado con el ambiente computacional,
    buscando el óptimo aprovechamiento.
    </string>
    <string name="telefono_dev">Telefono: 942332318</string>
    <!--BOTNES GLOBALES-->
    <string name="listar">Lista</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar</string>
    <string name="volver">Volver</string>
    <!--Editar foto-->
    <string name="elegir_imagen">Elegir Imagen Desde</string>
    <string name="actualizar_foto">Actualizar Foto</string>
    <string name="galeria">Galería</string>
    <string name="camara">Cámara</string>
    <string name="seleccionar">Seleccionar</string>
    <!--cliente-->
    <string name="registrar_cli">Registrar Cliente</string>
    <string name="uid_usuario">Mi UID</string>q


</resources>