<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:gravity="center" />

        <!-- Animación Lottie -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="plataforma.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false" />

        <!-- Nombre -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombres"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etnombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="17dp"
                android:inputType="text"
                android:hint="@string/txt_nombres" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Apellido -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_apellidos"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etapellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apellidos"
                android:inputType="text"
                android:padding="17dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Correo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_correo"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="17dp"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_correo" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contraseña -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="17dp"
                android:inputType="textPassword"
                android:hint="@string/txt_password1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirmar Password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirmar_password1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etconfirpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="17dp"
                android:inputType="textPassword"
                android:hint="@string/txt_confirmar_password1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Registrar Usuario -->
        <Button
            android:id="@+id/btn_registrar0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/btn_registrar" />

        <!-- Botón Volver a Ingreso -->
        <Button
            android:id="@+id/lbl_ir_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_ir_login" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
